fix: drawer scrollbar

--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -22,6 +22,9 @@ body {
   font-family: 'proxima nova', 'proxima-nova', sans-serif;
   background-color: #F2F2F2;
   overflow-x: hidden;
+  &.opened {
+    overflow: hidden;
+  }
 }
 
 a, button {
